--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,31 +1,12 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>ROSS Conf Logo</title>
-    <style media="screen">
-      #logo {
-        width: 300px;
-        height: 256px;
-        overflow: visible;
-      }
-      #logo span {
-        float: left;
-        display: block;
-        width:  46px;
-        height: 46px;
-        border: 2px solid #FFF;
-        background: #D2D3D4;
-      }
-      #logo span.present {
-        background: #FFA096;
-      }
-      #logo span.filler {
-        background: #FFF;
-      }
-    </style>
+    <link rel="stylesheet" href="/style.css" charset="utf-8" />
   </head>
   <body>
     <form action="#">
-      <input type="text" name="text" value="" size="100">
+      <input type="text" name="text" value="" size="60" autocomplete="off">
     </form>
 
     <script src='//zeptojs.com/zepto.min.js' type='text/javascript'></script>
