--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
       <input type="text" name="text" value="" size="60" autocomplete="off">
     </form>
 
-    <script src='//zeptojs.com/zepto.min.js' type='text/javascript'></script>
+    <script src='/javascripts/zepto.min.js' type='text/javascript'></script>
     <script src='/javascripts/lodash.js' type='text/javascript'></script>
     <script src='/javascripts/logo_generator.js' type='text/javascript'></script>
   </body>
